<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	 <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:gravity="center"
        android:background="#333333"
        android:paddingBottom="10dp" />
    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/regNam">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/firstPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/regPwd" />
     <EditText
        android:id="@+id/secondPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/regPwdWdh" />
	 <Button
            android:id="@+id/regiBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/regBtn" />

    <TextView
        android:id="@+id/registerFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>