<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
      <TextView
        android:id="@+id/addRestTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_addrest"
        android:gravity="center"
        android:background="#333333"
        android:paddingBottom="10dp" />
      <TextView 
        android:id="@+id/addRestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addrestName"
        />
       <EditText
        android:id="@+id/editRestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addrestName"
         />
        <TextView 
        android:id="@+id/addRestInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addrestInfo"
        />
       <EditText
        android:id="@+id/editRestInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addrestInfo"
      	 />
        <TextView 
        android:id="@+id/addRestLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addrestLink"
        />
       <EditText
        android:id="@+id/editRestLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addrestLink"
       	 />
       
       <Button 
           android:id="@+id/restToDb"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/addrestAddBtn"/>

</LinearLayout>