<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_start"
        android:gravity="center"
        android:background="#333333"
        android:paddingBottom="10dp" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<ScrollView 
		    android:layout_width="fill_parent"
		    android:layout_height="200dp"
		    android:layout_marginLeft="40dp"
		    android:layout_marginRight="40dp"
		    >
		    <de.ones.lunch.viewCompontents.StartCheckList
		        android:id="@+id/favlist"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:background="#333333"
		        android:scrollbars="">
		        
		        </de.ones.lunch.viewCompontents.StartCheckList>
			</ScrollView>
			
			<Button
			    android:id="@+id/allBtn" 
			    android:layout_width="200dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:text="@string/startAllBtn"/>
		</LinearLayout>
		
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"/>
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="bottom"
	    >
	
	    <Button
	        android:id="@+id/essenBtn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:text="@string/startEatBtn" />
	</LinearLayout>
</LinearLayout>